# openGL

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  helloworld.cpp  main.cpp  vcpkg-configuration.json  vcpkg.json
Header Files/: Camera.h  EBO.h  Texture.h  VAO.h  VBO.h  shaderClass.h
Resources/Shaders/: default.frag  default.vert  light.frag  light.vert
Sources/: Camera.cpp  EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  shaderClass.cpp
